# sulfur

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  startup.sql
migrations/2022-04-16-004339_http_download/: up.sql
migrations/2022-04-20-190824_http_download/: down.sql  up.sql
migrations/2022-05-13-092848_add triggers/: down.sql  up.sql
src/: download.rs  http.rs  main.rs  model.rs  request.rs  schema.rs  util.rs
src/api/: v1.rs
src/api/v1/: mod.rs
src/http/: mod.rs
src/persistence/: in_memory.rs  mod.rs  sqlite.rs
src/request/: http.rs
